# coderunner-generator

./: .gitignore  README.md  coderunner-generator.cabal  grammar.ebnf  hie.yaml  stack.yaml
app/: ConfigurationState.hs  ConstraintGraph.hs  Generator.hs  Helper.hs  Interaction.hs  InteractionLinux.hs  InteractionWindows.hs  Main.hs  Parser.hs  SemanticAnalyzer.hs
cpp-moodle-generator/: cpp-moodle-generator.cabal
cpp-moodle-generator/app/: Main.hs
cpp-moodle-generator/src/CPPCoderunner/: AbstractSyntaxTree.hs  Generator.hs  Parser.hs
cpp-moodle-generator/src/Generator/CPP/Moodle/: AbstractSyntaxTree.hs  Generator.hs  Parser.hs
example-files/: 01_new.tmpl  01_writing_a_statement.tmpl  01_writing_a_statement.txt  02_missing_parts_of_code.tmpl  03_errors_in_the_code.tmpl  03_errors_in_the_code.txt
generator/: generator.cabal
generator/src/: Generator.hs
generator/src/CoderunnerGenerator/: App.hs  ConfigGeneration.hs  Configuration.hs  Helper.hs  Interface.hs  Main.hs  ParameterAST.hs  ParameterParser.hs
generator/src/CoderunnerGenerator/Types/: Configuration.hs  ToParseResult.hs
generator/src/Generator/: App.hs  Atoms.hs  CmdArgs.hs  ConfigGeneration.hs  Configuration.hs  Globals.hs  Helper.hs  Interactive.hs  Interface.hs  Main.hs  ParameterAST.hs  ParameterName.hs  ParameterParser.hs  ParseResult.hs  ParserUtils.hs  Test.hs  ToParseResult.hs
generator/src/Generator/Configuration/: Construction.hs  FromParseResult.hs  Internal.hs  Type.hs
generator/src/Generator/ParameterParser/: AST.hs
generator/src/Generator/ParseResult/: FromAST.hs  Info.hs  Parser.hs  Type.hs
generator/src/Generator/ParseResult/Parser/: AST.hs
moodle-cpp-function/: moodle-cpp-function.cabal
moodle-cpp-function/app/: Main.hs
moodle-cpp-function/src/Generator/Moodle/CPPFunction/: AbstractSyntaxTree.hs  Generator.hs  Parser.hs
moodle-cpp-program/: moodle-cpp-program.cabal
moodle-cpp-program/app/: Main.hs
moodle-cpp-program/src/Generator/Moodle/CPPProgram/: AbstractSyntaxTree.hs  Generator.hs  Parser.hs
moodle-cpp-tracing/: moodle-cpp-tracing.cabal
moodle-cpp-tracing/app/: Main.hs
moodle-cpp-tracing/src/Generator/Moodle/CPPTracing/: AbstractSyntaxTree.hs  ArgParser.hs  Generator.hs  Parser.hs
src/CPPCoderunner/: AbstractSyntaxTree.hs  Generator.hs  Parser.hs
src/CoderunnerGenerator/: CmdArgs.hs  ConfigGeneration.hs  Generator.hs  Helper.hs  Interaction.hs  Interface.hs  Main.hs  Parser.hs  SemanticAnalyzer.hs  Test.hs
src/CoderunnerGenerator/Interaction/: Linux.hs  Windows.hs
src/CoderunnerGenerator/Types/: AbstractSyntaxTree.hs  AbstractSyntaxTree2.hs  App.hs  Configuration.hs  ConfigurationState.hs  ConstraintGraph.hs  Globals.hs  ParameterAST.hs  ParseResult.hs  SymbolTable.hs
