cabal-version:      3.0
name:               coderunner-generator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Janik Eriksson
maintainer:         eriksson@wifa.uni-leipzig.de

-- A copyright notice.
-- copyright:
-- category:
--extra-source-files: CHANGELOG.md

executable coderunner-generator
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Parser,
      SemanticAnalyzer,
      Interaction,
      Generator,
      Helper

    if os(windows)
      other-modules: InteractionWindows
      cpp-options: -DWindows
    else
      other-modules: InteractionLinux
      cpp-options: -DLinux

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base >= 4,
      parsec >= 3.1.2,
      xml,
      containers,
      filepath,
      text,
      transformers,
      directory,
      strings

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: CPP
