cabal-version:      3.0
name:               coderunner-generator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Janik Eriksson
maintainer:         eriksson@wifa.uni-leipzig.de

-- A copyright notice.
-- copyright:
-- category:
--extra-source-files: CHANGELOG.md

library
  exposed-modules:
      CoderunnerGenerator.Parser,
      CoderunnerGenerator.SemanticAnalyzer,
      CoderunnerGenerator.Interaction,
      CoderunnerGenerator.Generator,
      CoderunnerGenerator.Helper,
      CoderunnerGenerator.Types.ConstraintGraph,
      CoderunnerGenerator.Types.ConfigurationState,
      CoderunnerGenerator.Types.AbstractSyntaxTree,
      CoderunnerGenerator.Types.SymbolTable

  if os(windows)
    other-modules: CoderunnerGenerator.Interaction.Windows
    cpp-options: -Dwindows
  else
    other-modules: CoderunnerGenerator.Interaction.Linux
    cpp-options: -Dlinux

  build-depends:
    base >= 4,
    parsec >= 3.1.2,
    xml,
    containers,
    filepath,
    text,
    transformers,
    directory,
    brick,
    vty,
    microlens,
    microlens-th,
    pretty-simple,
    split

  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: CPP

executable coderunner-generator
  main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
  build-depends:
    base >= 4,
    parsec >= 3.1.2,
    xml,
    containers,
    filepath,
    text,
    transformers,
    directory,
    brick,
    vty,
    microlens,
    microlens-th,
    pretty-simple,
    split,
    coderunner-generator

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -threaded
