cabal-version:      3.0
name:               coderunner-generator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Janik Eriksson
maintainer:         eriksson@wifa.uni-leipzig.de

-- A copyright notice.
-- copyright:
-- category:
--extra-source-files: CHANGELOG.md

library
  exposed-modules:
      CoderunnerGenerator.Helper,
      CoderunnerGenerator.Types.Globals,
      CoderunnerGenerator.Types.Configuration,
      CoderunnerGenerator.Types.ParseResult,
      CoderunnerGenerator.Types.App,
      CoderunnerGenerator.CmdArgs,
      CoderunnerGenerator.ConfigGeneration,
      CoderunnerGenerator.Interface,
      CoderunnerGenerator.Main,
      CoderunnerGenerator.Test,
      CPPCoderunner.Parser,
      CPPCoderunner.AbstractSyntaxTree,
      CPPCoderunner.Generator

  if os(windows)
    cpp-options: -Dwindows
  else
    cpp-options: -Dlinux

  build-depends:
    base >= 4,
    megaparsec,
    xml,
    containers,
    filepath,
    text,
    transformers,
    directory,
    brick,
    vty,
    microlens,
    microlens-th,
    pretty-simple,
    split,
    optparse-applicative,
    random,
    HUnit

  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: CPP
  ghc-options: -Wall

executable coderunner-generator
  main-is:          Main.hs

  build-depends:
    base >= 4,
    coderunner-generator

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -threaded
