cabal-version:  3.0
name:           cpp-moodle-generator
version:        0.1.0.0
author:         Janik Eriksson
maintainer:     eriksson@wifa.uni-leipzig.de

library
  exposed-modules:
      Generator.CPP.Moodle.Parser,
      Generator.CPP.Moodle.Generator,
      Generator.CPP.Moodle.AbstractSyntaxTree
  hs-source-dirs:
      src
  build-depends:
      base,
      microlens,
      microlens-th,
      xml,
      megaparsec,
      generator
  default-language: Haskell2010

executable cpp-moodle-generator
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      cpp-moodle-generator,
      generator
  default-language: Haskell2010