cabal-version:      3.0
name:               generator
version:            0.1.0.0
author:             Janik Eriksson
maintainer:         eriksson@wifa.uni-leipzig.de

library
  exposed-modules:
      Generator.Helper,
      Generator.Configuration,
      Generator.ParseResult,
      Generator,
      Generator.ParserUtils,
      Generator.ParameterName,
      Generator.ParseResult.Parser.AST,
      Generator.ParseResult.Parser,

  other-modules:
      Generator.ParseResult.Type,
      Generator.ParseResult.Info,
      Generator.ParseResult.FromAST,
      Generator.ToParseResult,
      Generator.Configuration.Construction,
      Generator.Configuration.Type,
      Generator.Configuration.FromParseResult,
      Generator.Test,
      Generator.App,
      Generator.Globals,
      Generator.CmdArgs,
      Generator.Main
  
  build-depends:
      base,
      megaparsec,
      xml,
      containers,
      filepath,
      text,
      transformers,
      directory,
      microlens,
      microlens-th,
      pretty-simple,
      split,
      optparse-applicative,
      random,
      HUnit

  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: 
      FlexibleInstances
  ghc-options: -Wall