cabal-version:  3.0
name:           moodle-cpp-program
version:        0.1.0.0
author:         Janik Eriksson
maintainer:     eriksson@wifa.uni-leipzig.de

library
  exposed-modules:
      Generator.Moodle.CPPProgram.Parser,
      Generator.Moodle.CPPProgram.Generator,
      Generator.Moodle.CPPProgram.AbstractSyntaxTree
  hs-source-dirs:
      src
  build-depends:
      base,
      microlens,
      microlens-th,
      xml,
      megaparsec,
      generator
  default-language: Haskell2010

executable moodle-cpp-program
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      moodle-cpp-program,
      generator
  default-language: Haskell2010