cabal-version:  3.0
name:           moodle-cpp-tracing
version:        0.1.0.0
author:         Janik Eriksson
maintainer:     eriksson@wifa.uni-leipzig.de

library
  exposed-modules:
      Generator.Moodle.CPPTracing.Parser,
      Generator.Moodle.CPPTracing.Generator,
      Generator.Moodle.CPPTracing.AbstractSyntaxTree
  hs-source-dirs:
      src
  build-depends:
      base,
      microlens,
      microlens-th,
      xml,
      megaparsec,
      generator,
      text,
      process,
      bytestring,
      base64,
      mtl
  default-language: Haskell2010
  default-extensions:
       OverloadedRecordDot,
       DuplicateRecordFields,
       ImportQualifiedPost,
       FlexibleContexts

executable moodle-cpp-tracing
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      moodle-cpp-tracing,
      generator
  default-language: Haskell2010
  default-extensions:
       OverloadedRecordDot,
       DuplicateRecordFields,